Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 `,
         choices: [
           { label: "去灶房烧饭。", to: "third1" },
-          { label: "去烧水给你擦身上。。", to: "third2" }
+          { label: "去烧水给你擦身上。", to: "third2" }
         ]
       },
 
@@ -919,7 +919,7 @@
       },
 
 
-    twelve: {
+    end: {
         title: "尾声",
         text:
 `落笔丹青长阔
@@ -1023,4 +1023,5 @@
     renderNode(currentId);
   </script>
 </body>
+
 </html>
